# pinocchio

./: .clangd  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  dockgen.toml  flake.nix  package.xml  pixi.toml  sources.cmake
.github/workflows/: check-changelog.yml  check_label.yml  dockgen.yml  linux.yml  macos-linux-windows-pixi.yml  nix.yml  ros_ci.yml  update-flake-lock.yml  update_pixi_lockfile.yml
.github/workflows/cmake/: linux-debug-toolchain.cmake
.github/workflows/scripts/: get_compilation_flags.js
benchmark/: CMakeLists.txt  model-fixture.hpp  spatial-operations.cpp  timings-cg.cpp  timings-cholesky.cpp  timings-constrained-dynamics-derivatives.cpp  timings-contact-dynamics.cpp  timings-cppad-jit.cpp  timings-delassus-operations.cpp  timings-derivatives.cpp  timings-eigen.cpp  timings-geometry.cpp  timings-impulse-dynamics-derivatives.cpp  timings-impulse-dynamics.cpp  timings-jacobian.cpp  timings-linalg-inverse.cpp  timings-loop-constrained-aba.cpp  timings-parallel.cpp  timings.cpp
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  module.cpp
bindings/python/algorithm/: admm-solver.cpp  expose-aba-derivatives.cpp  expose-aba.cpp  expose-algorithms.cpp  expose-centroidal.cpp  expose-cholesky.cpp  expose-com.cpp  expose-constrained-dynamics.cpp  (+24 more)
development/: contributing.md  convention.md
development/iwyu/: boost.imp  casadi.imp  custom-scalars.imp  eigen.imp
doc/: Doxyfile.extra.in  Overview.md  _porting.md  treeview.dox
doc/_porting/: porting-2-to-3.md  porting-3-to-4.md  porting.md
doc/e-development/: Implement_a_new_joint.md
examples/: CMakeLists.txt  README.md  admm-constraint-solver.py  anymal-simulation.py  build-reduced-model.cpp  capsule-approximation.py  cassie-simulation.py  collisions.cpp  contact-cholesky.py  forward-dynamics-derivatives.cpp  g1-constraint-simulation.py  geometry-models.cpp  interpolation-SE3.cpp  inverse-dynamics-derivatives.cpp  inverse-dynamics.cpp  inverse-kinematics-3d.cpp  inverse-kinematics.cpp  kinematics-derivatives.cpp  model-configuration-converter.cpp  model-graph.cpp  multiprecision.cpp  overview-SE3.cpp  overview-lie.cpp  overview-simple.cpp  overview-urdf.cpp  simulation-closed-kinematic-chains.py  simulation-contact-dynamics.py  simulation-lcaba.py  talos-simulation.py
examples/casadi/: CMakeLists.txt  casadi-aba.cpp  casadi-crba.cpp  casadi-rnea.cpp  simulation-pendulum-variational.ipynb
examples/codegen/: CMakeLists.txt  codegen-crba.cpp  codegen-rnea.cpp
examples/cppad/: CMakeLists.txt  autodiff-rnea.cpp
include/pinocchio/: common-traits.hpp  common-traits.hxx  common.hpp  constraints.hpp  context.hpp  context.hxx  eigen-align.hxx  eigen-common.hpp  eigen-macros.hpp  eigen-macros.hxx  fwd.hpp  fwd.hxx  geometry.hpp  macros.hpp  math.hpp  multibody.hpp  serialization.hpp  spatial.hpp  traits.hpp  traits.hxx  unsupported.hpp
models/simple_humanoid_description/: box.dae
src/: CMakeLists.txt
src/algorithm/: aba-derivatives.cpp  aba.cpp  center-of-mass-derivatives.cpp  center-of-mass.cpp  centroidal-derivatives.cpp  centroidal.cpp  cholesky.cpp  compute-all-terms.cpp  constrained-dynamics-derivatives.cpp  constrained-dynamics.cpp  constraint-cholesky.cpp  contact-cholesky.cpp  contact-dynamics.cpp  contact-jacobian.cpp  crba.cpp  energy.cpp  frames-derivatives.cpp  frames.cpp  geometry.cpp  impulse-dynamics.cpp  jacobian.cpp  joint-configuration.cpp  kinematics-derivatives.cpp  kinematics.cpp  model.cpp  regressor.cpp  rnea-derivatives.cpp  rnea.cpp
src/algorithm/constraints/: utils.cpp
src/algorithm/solvers/: admm-solver.cpp  clarabel-solver.cpp  pgs-solver.cpp
src/collision/: collision.cpp  distance.cpp
src/multibody/: data.cpp  model.cpp  sample-models.cpp
src/parsers/graph/: model-graph-algo-geometry.cpp  model-graph-algo.cpp  model-graph.cpp
src/parsers/mjcf/: mjcf-graph-geom.cpp  mjcf-graph.cpp
src/parsers/python/: model.cpp
src/parsers/sdf/: geometry.cpp  model.cpp
src/parsers/urdf/: geometry.cpp  model.cpp  utils.cpp
src/parsers/utils/: file-explorer.cpp
unittest/: CMakeLists.txt  aba-derivatives.cpp  aba.cpp  admm-solver.cpp  algo-check.cpp  all-joints.cpp  alloca.cpp  block-diagonal-matrix.cpp  box-set.cpp  broadphase.cpp  cartesian-product-liegroups.cpp  center-of-mass-derivatives.cpp  centroidal-derivatives.cpp  centroidal.cpp  cholesky.cpp  classic-acceleration.cpp  closed-loop-dynamics.cpp  com.cpp  compute-all-terms.cpp  constrained-dynamics-derivatives.cpp  constrained-dynamics.cpp  constraint-cholesky.cpp  constraint-jacobian.cpp  constraint-variants.cpp  contact-cholesky.cpp  contact-dynamics-derivatives.cpp  contact-dynamics.cpp  contact-inverse-dynamics.cpp  contact-models.cpp  coulomb-friction-cone.cpp  crba.cpp  csv.cpp  data.cpp  delassus-operations.cpp  delassus-operator-dense.cpp  delassus-operator-preconditioned.cpp  delassus-operator-rigid-body.cpp  delassus.cpp  double-entry-container.cpp  dynamic-allocations-osx-arm64.supp  (+107 more)
unittest/casadi/: CMakeLists.txt  aba-derivatives.cpp  aba.cpp  algorithms.cpp  basic.cpp  constraint-dynamics-derivatives.cpp  constraint-dynamics.cpp  explog.cpp  integrate-derivatives.cpp  joints.cpp  rnea-derivatives.cpp  spatial.cpp
unittest/constraints/: init_constraints.hpp  jacobians-checker.hpp
unittest/cppad/: CMakeLists.txt  algorithms.cpp  basic.cpp  derivatives.cpp  joint-configurations.cpp  joints.cpp  spatial.cpp
unittest/cppadcg/: CMakeLists.txt  algorithms.cpp  basic.cpp  contact-dynamics.cpp  joint-configurations.cpp
unittest/packaging/: run_rnea.cpp
unittest/python/: CMakeLists.txt  bindings_admm.py  bindings_build_geom_from_urdf_memorycheck.supp  bindings_coal_transform.py  bindings_constraints.py  bindings_contact_inverse_dynamics.py  bindings_geometry_object.py  bindings_joints.py  bindings_lcaba.py  bindings_mjcf.py  bindings_pgs.py  bindings_point_anchor_constraint.py  bindings_sample_models.py  bindings_viser_visualizer.py  test_case.py
unittest/utils/: macros.hpp  model-generator.hpp
utils/: CMakeLists.txt  pinocchio_read_model.cpp
(+1172 files in other folders)
